fix: fixed issue where image will overflow past carousel

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -3,12 +3,11 @@
 .carousel {
   display: flex;
   align-items: center;
-  height: 100%;
   position: relative;
-  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.384);
   border-radius: 16px;
   overflow: hidden;
+  width: 100%;
 
   button {
     position: absolute;
@@ -29,11 +28,16 @@
     justify-content: center;
 
     &.left {
-      left: 1.2rem;
+      left: 0.2rem;
     }
 
     &.right {
-      right: 1.2rem;
+      right: 0.2rem;
+    }
+
+    &.toggler {
+      top: 1.2rem;
+      right: 0.2rem;
     }
   }
 
@@ -42,13 +46,16 @@
   }
 
   .carousel-item {
+    width: 100%;
     display: flex;
     justify-content: center;
-    
+
     img {
+      object-fit: contain;
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 }
